fix: fix alert-dialog component causing horizontal shift when opened

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,9 @@ textarea {
     scrollbar-gutter: stable both-edges;
   }
 }
+
+/* This fixes alert-dialog component causing horizontal shift when opened */
+html body[data-scroll-locked] {
+  --removed-body-scroll-bar-size: 0 !important;
+  margin-right: 0 !important;
+}
